--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-family: Helvetica;
 }
 
 input {
@@ -19,7 +20,20 @@ table {
 thead, tbody { display: block; }
 
 tbody {
-    height: 500px;
-    overflow-y: auto;
-    overflow-x: hidden;
+  height: 500px;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+tr {
+  display: flex;
+  justify-content: space-around;
+}
+
+td {
+  width: 100%;
+}
+
+tr:nth-child(even) {
+  background: #e8e8e8;
 }
